M70: APM in Audio Service: Fix render delay calculation

The render delay is calculated backwards, making it negative. The
time we're comparing with is in the future, not the past.

Bug: 889494
Change-Id: I3aa8b64096caa9ad5feadcafc1df5bca8e035750
Reviewed-on: https://chromium-review.googlesource.com/1246163
Reviewed-by: Max Morin <maxmorin@chromium.org>
Commit-Queue: Oskar Sundbom <ossu@chromium.org>
Cr-Original-Commit-Position: refs/heads/master@{#594648}(cherry picked from commit eae22bb158b76b86266becd0fb5c3b562c1e9908 [formerly e9826d74d81dc41935af6ce6af60885cd97dce7a])
Reviewed-on: https://chromium-review.googlesource.com/c/1264164
Reviewed-by: Oskar Sundbom <ossu@chromium.org>
Cr-Commit-Position: refs/branch-heads/3538@{#873}
Cr-Branched-From: 57781ff9a8651bc653184f680b0a4d8b92b6971f [formerly 79f7c91a2b2a2932cd447fa6f865cb6662fa8fa6]-refs/heads/master@{#587811}
Former-commit-id: a8e3f7bfcdab61e9847daa8dc2c6d7d5278f0aba